Fix misaligned links

--- a/files/static/styles/default.css
+++ b/files/static/styles/default.css
@@ -17,7 +17,6 @@ a:hover {
 }
 
 a span {
-    display: inline-flex;
     white-space: pre;
 }
 
